# ai-appstore

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  CONTRIBUTING  Makefile  README.md  build-images.sh  docker-compose.yaml  jaxnotes.md  skaffold.yaml
back-end/: .dockerignore  .gitignore  Dockerfile  Dockerfile.test  Makefile  README.md  docker-entrypoint.sh  pyproject.toml  run.sh
back-end/scripts/: decrypt-env.sh
back-end/src/: main.py
back-end/src/config/: .env.gpg  .env.public  README.md  config.py  decrypt-env.sh  encrypt-env.sh
back-end/src/internal/: auth.py  preprocess_html.py  templates.py  utils.py
back-end/src/internal/data_connector/: __init__.py  clearml_dataset.py  connector.py
back-end/src/internal/dependencies/: clearml_client.py  file_validator.py  k8s_client.py  minio_client.py  mongo_client.py
back-end/src/internal/experiment_connector/: __init__.py  clearml_exp.py  connector.py
back-end/src/internal/tasks/: __init__.py  clean_orphaned_media.py  clean_orphaned_services.py  init_db.py  model_exporter.py
back-end/src/models/: auth.py  buckets.py  common.py  dataset.py  engine.py  experiment.py  exports.py  iam.py  model.py
back-end/src/routers/: auth.py  buckets.py  datasets.py  engines.py  experiments.py  exports.py  iam.py  models.py
back-end/src/templates/ambassador/: ambassador-mapping.yaml.j2  inference-engine-deployment.yaml.j2  (+1 more)
back-end/static/: redoc.standalone.js  swagger-ui-bundle.js
back-end/tests/: Dockerfile.minio  docker-compose.yaml
back-end/tests/unit/: conftest.py
docs/: pyproject.toml  requirements.txt  tmp.txt
docs/source/: conf.py  index.rst
docs/source/back-end-api/: src.config.config.rst  src.config.rst  src.internal.auth.rst  src.internal.data_connector.clearml_dataset.rst  src.internal.data_connector.connector.rst  src.internal.data_connector.rst  src.internal.dependencies.clearml_client.rst  src.internal.dependencies.file_validator.rst  src.internal.dependencies.k8s_client.rst  src.internal.dependencies.minio_client.rst  src.internal.dependencies.mongo_client.rst  src.internal.dependencies.rst  src.internal.experiment_connector.clearml_exp.rst  src.internal.experiment_connector.connector.rst  src.internal.experiment_connector.rst  src.internal.preprocess_html.rst  src.internal.rst  src.internal.tasks.clean_orphaned_media.rst  src.internal.tasks.clean_orphaned_services.rst  src.internal.tasks.init_db.rst  src.internal.tasks.rst  src.internal.templates.rst  src.internal.utils.rst  src.main.rst  src.models.auth.rst  src.models.buckets.rst  src.models.common.rst  src.models.dataset.rst  src.models.engine.rst  src.models.experiment.rst  src.models.iam.rst  src.models.model.rst  src.models.rst  src.routers.auth.rst  src.routers.buckets.rst  src.routers.datasets.rst  src.routers.engines.rst  src.routers.experiments.rst  src.routers.iam.rst  src.routers.models.rst  (+2 more)
docs/source/developer-guide/: overview.md
docs/source/spec/: openapi.yml
docs/source/user-guide/: authentication.md  introduction.md  shopping-for-models.md
front-end/: .env  (+9 more)
inference-services/inference-engine/: .dockerignore  CONTRIBUTING.md  Makefile  README.md  build.py  pyproject.toml
inference-services/inference-engine/dockerfiles/: cpu.Dockerfile  gpu.Dockerfile
(+265 files in other folders)
